tests/snapshots/examples_fixtures/basics__strings.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/strings.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `substring`.

  examples/basics/strings.flx:29:11
   |
29 |     print(substring("HELLO world", 0));
   |           ^^^^^^^^^

Hint:
  Define it first: let substring = ...;
== stdout ==
<not executed>
